--- a/Left_Menu_/TG_Intro_ViewController.xib
+++ b/Left_Menu_/TG_Intro_ViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment version="4352" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -170,6 +170,11 @@
             <point key="canvasLocation" x="515.625" y="186.97183098591549"/>
         </view>
     </objects>
+    <designables>
+        <designable name="e5B-Ou-Lo5">
+            <size key="intrinsicContentSize" width="40.5" height="19.5"/>
+        </designable>
+    </designables>
     <resources>
         <image name="btn_upgrade" width="49.5" height="78.5"/>
         <image name="ic_avatar" width="116.5" height="116.5"/>
